--- a/Admin User Level/Moderator Functions/CSS/modSquadAccountsStyle.css
+++ b/Admin User Level/Moderator Functions/CSS/modSquadAccountsStyle.css
@@ -195,7 +195,7 @@ strong {
 
 .navBarOverflow {
     height: calc(100vh - 300px);
-    overflow-y: auto; 
+    overflow-y: scroll; 
     overflow-x: hidden;
     margin-bottom: 20px;
 }
